--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,8 +2,14 @@ doctype html
 html
   head
     title= title
+    link(rel='stylesheet', href='/stylesheets/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    
+    link(href="//maxcdn.bootstrapcdn.com/bootswatch/4.3.1/" + "lux" + "/bootstrap.min.css", rel="stylesheet")
   body
     block content
     script(src='http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js')
     script(src='/javascripts/global.js')
+    script( src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js' )
+    //- script( src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js' )
+    
