--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,7 +5,7 @@ html
     link(rel='stylesheet', href='/stylesheets/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     
-    link(href="//maxcdn.bootstrapcdn.com/bootswatch/4.3.1/" + "lux" + "/bootstrap.min.css", rel="stylesheet")
+    link(href="//maxcdn.bootstrapcdn.com/bootswatch/4.3.1/" + "sandstone" + "/bootstrap.min.css", rel="stylesheet")
   body
     block content
     script(src='http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js')
